Fixed alignment on form and checkbox.

--- a/style.css
+++ b/style.css
@@ -22,9 +22,9 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  width: 600px;
+  width: 531px;
   background-color: #f0f0f0;
-  padding: 30px;
+  padding: 28px 63px;
 }
 
 .remember-me__container {
@@ -40,7 +40,7 @@ body {
 .form__username,
 .form__password {
   padding: 15px;
-  width: 450px;
+  width: 100%;
   margin-bottom: 10px;
   border: 1px solid #ddd;
 }
@@ -73,6 +73,5 @@ body {
 }
 
 .remember-me__checkbox {
-  margin-left: 25px;
   border: none;
 }
